<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/item"
    tools:context=".ItemSpecifics">

    <!-- Logo header -->
    <ImageButton
        android:id="@+id/imgBtnLogo"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/imgBtnLogo"
        android:src="@drawable/logo" />

    <!-- Item name -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtItemName"
        android:id="@+id/txtItemName"
        android:layout_below="@id/imgBtnLogo"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="#000000" />

    <!-- Item description -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtItemDescription"
        android:id="@+id/txtItemDescription"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/txtItemName"
        android:layout_alignParentStart="true"
        android:textColor="#000000" />

    <!-- Item image -->
    <ImageView
        android:id="@+id/imgItem"
        android:layout_width="395dp"
        android:layout_height="230dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="0dp" />

    <!-- Item name from DB -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtName"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_marginLeft="5dp"
        android:layout_alignTop="@+id/txtItemName"
        android:layout_toEndOf="@+id/txtItemName" />

    <!-- Item description from DB -->

    <!-- Text view for quantity -->

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="345dp"
        android:layout_height="100dp"
        android:layout_above="@+id/imgItem"
        android:layout_below="@+id/txtItemDescription"
        android:layout_alignEnd="@+id/imgItem"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="22dp"
        android:text="item description goes here"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtQuantity"
        android:id="@+id/txtQuantity"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_below="@+id/txtItemPrice"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp" />

    <!-- Text view for price -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Price:"
        android:id="@+id/txtPrice"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_above="@+id/txtQuantity"
        android:layout_alignParentStart="true" />

    <!-- Text view for price from DB -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="list price here"
        android:id="@+id/txtItemPrice"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_below="@+id/imgItem"
        android:layout_toEndOf="@+id/txtPrice" />

    <!-- List view to select quantity up to 20 to reduce human error -->

    <!-- Add to basket button -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnBasket"
        android:id="@+id/btnAdd"
        android:background="@drawable/roundedbtn"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:spinnerMode="dropdown"
        android:layout_alignTop="@+id/txtQuantity"
        android:layout_toEndOf="@+id/txtQuantity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/txtNotification"
        android:layout_above="@+id/btnAdd"
        android:layout_alignEnd="@+id/spinner"
        android:layout_alignParentStart="true"
        android:textColor="#ff0000"
        android:textAlignment="center"
        android:layout_below="@+id/spinner"
        android:textSize="12sp" />

</RelativeLayout>
