<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/pay"
    tools:context="hicham.info3245.com.bakeryapp.AddPaymentInfo">

    <TextView
        android:id="@+id/addPaymentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:text="ADD PAYMENT"
        android:textColor="#070707"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCardholderName"
        android:id="@+id/txtCardholder"
        android:textIsSelectable="false"
        android:textSize="17sp"
        android:textColor="#090909"
        android:layout_below="@+id/addPaymentTitle"
        android:layout_alignParentStart="false"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColor="#1030DF"
        android:ems="10"
        android:id="@+id/edtxtCardholder"
        android:textSize="17sp"
        android:layout_alignBottom="@+id/txtCardholder"
        android:layout_toEndOf="@+id/txtCardholder" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cc_number"
        android:id="@+id/txtCcNumber"
        android:textSize="17sp"
        android:textColor="#090909"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/txtCardholder" />

    <EditText
        android:id="@+id/numCardNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/addPaymentTitle"
        android:layout_alignBottom="@+id/txtCcNumber"
        android:layout_marginEnd="-53dp"
        android:layout_marginBottom="0dp"
        android:ems="10"
        android:textColor="#1434E2"
        android:inputType="number" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/expiry_month"
        android:hint="Enter Expiry Month/Year"
        android:textColorHint="#0E0E0E"
        android:textColor="#1635E4"
        android:maxLength="9"
        android:layout_below="@+id/numCardNumber"
        android:layout_marginTop="15dp"></EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cvv_id"
        android:hint="Enter Cvv Number"
        android:textColorHint="#121211"
        android:maxLength="3"
        android:inputType="number"
        android:textColor="#1334E7"
        android:layout_below="@+id/expiry_month"
        android:layout_marginTop="15dp"></EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cvv_id"
        android:weightSum="100"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSubmit"
        android:id="@+id/btnPaymentInfo"
        android:layout_weight="50"
        android:background="@drawable/roundedbtn"
        android:textColor="#000000"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCancel"
        android:layout_weight="50"
        android:id="@+id/btncancel"
        android:background="@drawable/roundedbtn"
        android:textColor="#000000"
        android:layout_below="@+id/btnPaymentInfo"
        android:layout_alignEnd="@+id/btnPaymentInfo"
        android:layout_toEndOf="@+id/txtCcNumber"
        android:layout_alignStart="@+id/btnPaymentInfo" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/txtError"
        android:layout_centerHorizontal="true"
        android:textSize="16dp"
        android:textColor="#ff0000"
        android:layout_below="@+id/numCardNumber" />

</RelativeLayout>
